--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -1,5 +1,211 @@
 /* ROOT, HEADER, FOOTER AND GENERAL STYLES */
+// ROOT VARIABLES
+:root {
+    --primary: #d87d4a;
+    --primaryLight: #fbaf85;
+
+    --grey-100: #fafafa;
+    --grey-200: #f1f1f1;
+    --grey-900: #101010;
+}
+
+// FONTS
+/* manrope-regular - latin */
+@font-face {
+    font-display: swap;
+    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 400;
+    src: url('/src/assets/fonts/manrope-v15-latin-regular.woff2') format('woff2');
+    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+/* manrope-500 - latin */
+@font-face {
+    font-display: swap;
+    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 500;
+    src: url('/src/assets/fonts/manrope-v15-latin-500.woff2') format('woff2');
+    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+/* manrope-700 - latin */
+@font-face {
+    font-display: swap;
+    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 700;
+    src: url('/src/assets/fonts/manrope-v15-latin-700.woff2') format('woff2');
+    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+
+*,
+*:before,
+*:after {
+    box-sizing: border-box;
+}
+
+body,
+html {
+    font-size: 100%;
+    font-family: 'Manrope', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body {
+    margin: 0;
+}
+
 // hidden class
 .hidden {
     display: none;
+}
+
+button {
+    cursor: pointer;
+    background: transparent;
+    border: none;
+}
+
+
+// header / nav styles
+#cs-navigation {
+    width: 100vw;
+    background-color: black;
+    position: fixed;
+    top: 0;
+
+
+    nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 90px;
+        padding: 0 24px;
+    }
+
+    &.cs-active {
+        &:before {
+            width: 100%;
+            opacity: 1;
+        }
+
+        .nav-links-wrapper {
+            opacity: 1;
+            transform: scaleX(1);
+            transition-delay: 0.2s;
+        }
+    }
+
+    .cs-toggle {
+        width: 16px;
+        height: clamp(2.75rem, 6vw, 3rem);
+        border-radius: calc(4 / 16 * 1rem);
+        background-color: transparent;
+        border: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .cs-active {
+        .cs-line1 {
+            top: 50%;
+            transform: translate(-50%, -50%) rotate(225deg);
+        }
+
+        .cs-line2 {
+            top: 50%;
+            transform-origin: center;
+            transform: translate(-50%, -50%) translateY(0) rotate(-225deg);
+        }
+
+        .cs-line3 {
+            bottom: 100%;
+            opacity: 0;
+        }
+    }
+
+    .cs-box {
+        /* 24px - 28px */
+        width: clamp(1.5rem, 2vw, 1.75rem);
+        /* 14px - 16px */
+        height: clamp(0.875rem, 1.5vw, 1rem);
+        position: relative;
+    }
+
+    .cs-line {
+        width: 16px;
+        height: 3px;
+        background-color: white;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    .cs-line1 {
+        top: 0;
+        transform-origin: center;
+        transition: transform 0.5s, top 0.3s, left 0.3s;
+        animation-duration: 0.7s;
+        animation-timing-function: ease;
+        animation-fill-mode: forwards;
+        animation-direction: normal;
+    }
+
+    .cs-line2 {
+        top: 50%;
+        transform: translateX(-50%) translateY(-50%);
+        transition: top 0.3s, left 0.3s, transform 0.5s;
+        animation-duration: 0.7s;
+        animation-timing-function: ease;
+        animation-fill-mode: forwards;
+        animation-direction: normal;
+    }
+
+    .cs-line3 {
+        bottom: 0;
+        transition: bottom 0.3s, opacity 0.3s;
+    }
+
+    .nav-links-wrapper {
+        height: 100vh;
+        opacity: 0;
+        background-color: rgba(0, 0, 0, 0.377);
+        overflow: hidden;
+        position: absolute;
+        top: 100%;
+        left: auto;
+        right: 0;
+        z-index: -1;
+        transform: scaleX(0);
+        transform-origin: top right;
+        transition: transform 0.4s, opacity 0.3s;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 4em;
+
+
+        .header-categories {
+            width: 100vw;
+            background-color: white;
+
+            img {
+                height: 104px;
+                width: auto;
+            }
+        }
+
+
+        ul {
+            display: none;
+        }
+    }
+
+
 }
