--- a/src/assets/sass/home.scss
+++ b/src/assets/sass/home.scss
@@ -1,5 +1,6 @@
 /* HOME PAGE STYLES */
 
+/* HERO SECTION */
 #hero {
     position: relative;
     text-align: center;
@@ -38,7 +39,7 @@
 }
 
 
-/* featured section */
+/* FEATURED SECTION */
 .home-featured {
     display: flex;
     flex-direction: column;
@@ -61,6 +62,9 @@
             background-repeat: no-repeat;
             height: 600px;
             padding: 55px 24px;
+            display: flex;
+            flex-direction: column;
+            gap: 24px;
 
 
             picture {
@@ -83,6 +87,7 @@
                 h2 {
                     font-size: 36px;
                     letter-spacing: 1.29px;
+                    margin: 0;
 
                 }
 
@@ -150,10 +155,11 @@
 
 
             picture {
+                
                 img {
                     border-radius: 8px;
-                    width: 100%;
-                    height: auto;
+                   width: 100%;
+                   height: auto;
                 }
             }
 
@@ -163,6 +169,7 @@
                 padding-left: 24px;
                 padding-top: 41px;
                 padding-bottom: 41px;
+                border-radius: 8px;
 
                 .cs-button {
                     background-color: transparent;
