--- a/src/assets/sass/components/cart.scss
+++ b/src/assets/sass/components/cart.scss
@@ -1,1 +1,143 @@
 /* CART STYLES */
+
+.cart-wrapper {
+    z-index: 10;
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.418);
+    padding-top: 24px;
+    display: flex;
+    justify-content: center;
+
+
+    .cart {
+        background-color: white;
+        border-radius: 8px;
+        width: 90%;
+        max-width: 377px;
+        padding: 31px 32px;
+        height: fit-content;
+
+        div,
+        li {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        div {
+            h2 {
+                font-size: 18px;
+                margin: 0;
+            }
+
+            .remove-all {
+                color: var(--grey-300);
+                text-decoration: underline;
+            }
+        }
+
+        ul {
+            margin-top: 31px;
+            display: flex;
+            flex-direction: column;
+            gap: 24px;
+
+            li {
+                div {
+                    display: grid;
+                    grid-template-columns: 64px 1fr;
+                    // grid-template-rows: 32px 32px;
+                    grid-template-areas: "image name"
+                        "image price";
+                    column-gap: 16px;
+
+                    img {
+                        grid-area: image;
+                    }
+
+                    h4 {
+                        grid-area: name;
+                        font-size: 15px;
+                        margin: 0;
+                        align-self: end;
+                        max-width: 85px;
+                    }
+
+                    p {
+                        grid-area: price;
+                        font-size: 14px;
+                        font-weight: 700;
+                        margin: 0;
+                    }
+                }
+
+                // remove number input arrows
+                /* Chrome, Safari, Edge, Opera */
+                input::-webkit-outer-spin-button,
+                input::-webkit-inner-spin-button {
+                    -webkit-appearance: none;
+                    margin: 0;
+                }
+
+                /* Firefox */
+                input[type=number] {
+                    -moz-appearance: textfield;
+                }
+
+                // quantity input
+                .quantity-input {
+                    display: flex;
+                    width: 96px;
+                    height: 32px;
+
+                    button,
+                    input {
+                        width: 33%;
+                        border: none;
+                        background-color: var(--grey-200);
+                        font-size: 13px;
+                        font-weight: 700;
+                    }
+
+                    input {
+                        color: black;
+                        text-align: center;
+                    }
+
+                    button {
+                        color: var(--grey-300);
+
+                        &:hover {
+                            color: var(--primary);
+                        }
+                    }
+                }
+            }
+        }
+
+        .cart-total {
+            margin-top: 32px;
+
+            span:nth-of-type(1) {
+                font-size: 15px;
+                font-weight: 500;
+                text-transform: uppercase;
+                color: var(--grey-300);
+            }
+
+            span:nth-of-type(2) {
+                font-weight: 700;
+                font-size: 18px;
+            }
+
+        }
+
+        // checkout button
+        .cs-button {
+            width: 100%;
+            margin-top: 24px;
+        }
+    }
+}
