--- a/src/assets/sass/checkout.scss
+++ b/src/assets/sass/checkout.scss
@@ -8,18 +8,32 @@
     font-weight: 500;
 }
 
+main {
+    background-color: var(--grey-100);
+}
+
 /* FORM STYLES */
 #checkout-form {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+
     .form-wrapper {
+        background-color: white;
+        border-radius: 8px;
+        padding: 24px 24px 0 24px;
 
         h2 {
             font-size: 28px;
             text-transform: uppercase;
             letter-spacing: 1px;
+            margin-top: 0;
         }
 
         fieldset {
             border: none;
+            padding: 0;
+            margin: 0;
 
             legend {
                 color: var(--primary);
@@ -113,9 +127,110 @@
         }
     }
 
-    // .summary-wrapper {
+    .summary-wrapper {
+        background-color: white;
+        border-radius: 8px;
+        padding: 32px 24px 0 24px;
 
-    // }
+        h3 {
+            text-transform: uppercase;
+            margin-top: 0;
+            font-size: 18px;
+            margin-bottom: 31px;
+        }
+
+        ul {
+            display: flex;
+            flex-direction: column;
+            gap: 24px;
+
+            li {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+
+                div {
+                    display: grid;
+                    grid-template-columns: 64px 1fr;
+                    // grid-template-rows: 32px 32px;
+                    grid-template-areas: "image name"
+                        "image price";
+                    column-gap: 16px;
+
+                    img {
+                        grid-area: image;
+                    }
+
+                    h4 {
+                        grid-area: name;
+                        font-size: 15px;
+                        margin: 0;
+                        align-self: end;
+                        max-width: 85px;
+                    }
+
+                    p {
+                        grid-area: price;
+                        font-size: 14px;
+                        font-weight: 700;
+                        margin: 0;
+                    }
+                }
+
+                span {
+                    font-weight: 700;
+                    color: var(--grey-300);
+                }
+            }
+        }
+
+        .amount-calculations,
+        .grand-total {
+            text-transform: uppercase;
+
+            div {
+                display: flex;
+                justify-content: space-between;
+
+                span {
+                    &:nth-of-type(1) {
+                        color: var(--grey-300);
+                        font-weight: 500;
+                    }
+
+                    &:nth-of-type(2) {
+                        font-size: 18px;
+                        font-weight: 700;
+                    }
+                }
+            }
+
+        }
+
+        .amount-calculations {
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+            margin-top: 32px;
+        }
+
+        .grand-total {
+            margin-top: 24px;
+
+            div {
+                span {
+                    &:nth-of-type(2) {
+                        color: var(--primary);
+                    }
+                }
+            }
+        }
+
+        .cs-button {
+            margin: 32px 0;
+            width: 100%;
+        }
+    }
 }
 
 /* ORDER SUMMARY */
