--- a/src/assets/sass/home.scss
+++ b/src/assets/sass/home.scss
@@ -10,7 +10,10 @@
     max-height: 650px;
 
     picture {
+        display: block;
+
         img {
+            display: block;
             width: 100%;
             height: auto;
         }
@@ -19,17 +22,23 @@
 
     .cs-text {
         position: absolute;
+        padding: 0 50px;
 
         h1 {
             color: white;
             font-size: 36px;
             letter-spacing: 1.29px;
             margin-top: 16px;
+            margin-bottom: 0;
         }
 
         .new {
             color: var(--grey-300);
-            margin-top: 0;
+            margin: 0;
+        }
+
+        p {
+            margin: 24px 0;
         }
 
         .cs-button {
@@ -115,7 +124,6 @@
 
             picture {
                 position: absolute;
-                z-index: -1;
                 top: 0;
                 left: 0;
                 width: 100%;
@@ -134,6 +142,8 @@
             }
 
             .cs-text {
+                z-index: 10;
+
                 h2 {
                     margin-top: 0;
                 }
@@ -155,11 +165,11 @@
 
 
             picture {
-                
+
                 img {
                     border-radius: 8px;
-                   width: 100%;
-                   height: auto;
+                    width: 100%;
+                    height: auto;
                 }
             }
 
