--- a/src/assets/sass/category.scss
+++ b/src/assets/sass/category.scss
@@ -8,11 +8,21 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 90px;
 
     h1 {
         color: white;
         font-size: 28px;
         letter-spacing: 2px;
         text-align: center;
+    }
+}
+
+/* PRODUCT CARDS SECTION */
+.content-wrapper {
+    .card-wrapper {
+        display: flex;
+        flex-direction: column;
+        gap: 120px;
     }
 }
