--- a/src/assets/sass/checkout.scss
+++ b/src/assets/sass/checkout.scss
@@ -1,7 +1,15 @@
 /* STYLES FOR THE CHECKOUT PAGE */
 
-main {
-    background-color: var(--grey-100);
+/* PAGE LAYOUT */
+.checkout-wrapper {
+    margin-top: 90px;
+    position: relative;
+    background-color: var(--grey-200);
+    padding: 65px 24px 97px 24px;
+
+    .go-back {
+        top: 16px;
+    }
 }
 
 /* FORM STYLES */
@@ -13,7 +21,7 @@ main {
     .form-wrapper {
         background-color: white;
         border-radius: 8px;
-        padding: 24px 24px 0 24px;
+        padding: 24px;
 
         h2 {
             font-size: 28px;
@@ -281,8 +289,9 @@ main {
     position: fixed;
     // height of nav
     top: 90px;
+    left: 0;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-color: rgba(0, 0, 0, 0.418);
     padding-top: 24px;
     display: flex;
