--- a/src/assets/sass/components/cart.scss
+++ b/src/assets/sass/components/cart.scss
@@ -4,11 +4,12 @@
     z-index: 10;
     position: fixed;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-color: rgba(0, 0, 0, 0.418);
     padding-top: 24px;
     display: flex;
     justify-content: center;
+    top: 90px;
 
 
     .cart {
