--- a/src/assets/sass/components/otherProducts.scss
+++ b/src/assets/sass/components/otherProducts.scss
@@ -14,6 +14,11 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            gap: 32px;
+
+            h3 {
+                margin: 0;
+            }
 
             img {
                 width: 100%;
