--- a/src/assets/sass/components/productCardShort.scss
+++ b/src/assets/sass/components/productCardShort.scss
@@ -6,12 +6,21 @@
     img {
         width: 100%;
         height: auto;
+        margin-bottom: 32px;
+    }
+
+    .new {
+        margin-bottom: 24px;
     }
 
     h2 {
         font-size: 28px;
         text-transform: uppercase;
         letter-spacing: 1px;
+    }
+
+    p {
+        margin: 24px 0;
     }
 
     .cs-button {
