--- a/src/assets/sass/product.scss
+++ b/src/assets/sass/product.scss
@@ -1,14 +1,36 @@
 /* PRODUCT PAGE STYLES */
 
+/* PAGE LAYOUT */
+.product-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 88px;
+    position: relative;
+    margin-top: 90px;
+
+    .go-back {
+        top: -45px;
+    }
+}
+
 /* product card */
 .product-card {
     img {
         width: 100%;
         height: auto;
+        margin-bottom: 32px;
+    }
+
+    .new {
+        margin-bottom: 24px;
     }
 
     h2 {
         font-size: 28px;
+    }
+
+    p {
+        margin: 24px 0;
     }
 
     .price {
@@ -21,6 +43,7 @@
     .quantity-input {
         display: flex;
         gap: 16px;
+        margin-top: 32px;
 
         label {
             display: flex;
@@ -33,6 +56,8 @@
                 background-color: inherit;
                 font-weight: 700;
                 font-size: 13px;
+                text-align: center;
+                width: 33%;
             }
 
             button {
@@ -40,8 +65,22 @@
                 font-weight: 700;
                 font-size: 13px;
                 color: var(--grey-300);
+                padding: 0;
             }
         }
+    }
+
+    // remove number input arrows
+    /* Chrome, Safari, Edge, Opera */
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
+
+    /* Firefox */
+    input[type=number] {
+        -moz-appearance: textfield;
     }
 }
 
@@ -49,13 +88,23 @@
 
 /* product features */
 .product-features {
+
     h2 {
         font-size: 24px;
         letter-spacing: .86px;
     }
 
+    p {
+        margin-bottom: 88px;
+    }
+
     /* box contents */
     ul {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        margin-top: 24px;
+
         li {
             display: flex;
             gap: 21px;
@@ -78,6 +127,7 @@
         display: grid;
         grid-template-columns: 1fr;
         gap: 20px;
+        margin-top: 88px;
 
         img {
             width: 100%;
