--- a/src/assets/sass/components/categories.scss
+++ b/src/assets/sass/components/categories.scss
@@ -40,7 +40,7 @@
             color: black;
         }
 
-        a {
+        span {
             color: var(--grey-300);
             text-transform: uppercase;
             letter-spacing: 1px;
