--- a/src/assets/sass/components/cart.scss
+++ b/src/assets/sass/components/cart.scss
@@ -36,6 +36,10 @@
             .remove-all {
                 color: var(--grey-300);
                 text-decoration: underline;
+
+                &:hover {
+                    color: var(--primary);
+                }
             }
         }
 
