--- a/src/assets/sass/components/categories.scss
+++ b/src/assets/sass/components/categories.scss
@@ -51,5 +51,11 @@
             justify-content: center;
             align-items: center;
         }
+
+        &:hover {
+            span {
+                color: var(--primary);
+            }
+        }
     }
 }
