--- a/src/assets/sass/product.scss
+++ b/src/assets/sass/product.scss
@@ -51,6 +51,8 @@
             width: 120px;
             height: 48px;
 
+
+
             input {
                 border: none;
                 background-color: inherit;
@@ -66,6 +68,10 @@
                 font-size: 13px;
                 color: var(--grey-300);
                 padding: 0;
+
+                &:hover {
+                    color: var(--primary);
+                }
             }
         }
     }
