--- a/src/assets/sass/components/categories.scss
+++ b/src/assets/sass/components/categories.scss
@@ -59,3 +59,11 @@
         }
     }
 }
+
+/* tablet */
+@media screen and (min-width: 700px) {
+    .categories {
+        flex-direction: row;
+        gap: 10px;
+    }
+}
