--- a/src/assets/sass/checkout.scss
+++ b/src/assets/sass/checkout.scss
@@ -12,11 +12,23 @@
     }
 }
 
+/* tablet */
+@media screen and (min-width: 700px) {
+    .checkout-wrapper {
+        padding: 97px 40px 116px 40px;
+
+        .go-back {
+            top: 48px;
+        }
+    }
+}
+
 /* FORM STYLES */
 #checkout-form {
     display: flex;
     flex-direction: column;
-    gap: 30px;
+
+    gap: 32px;
 
     .form-wrapper {
         background-color: white;
@@ -103,8 +115,8 @@
                 align-items: center;
                 gap: 16px;
                 font-size: 14px;
-                    font-weight: 700;
-                    letter-spacing: -0.24px;
+                font-weight: 700;
+                letter-spacing: -0.24px;
 
                 &:hover {
                     border-color: var(--primary);
@@ -138,7 +150,8 @@
                 }
             }
 
-            .payment-method {
+            .cash-selected,
+            .e-money-selected {
                 margin: 32px 0;
             }
 
@@ -168,7 +181,7 @@
                 }
             }
 
-            .payment-method {
+            .cash-selected {
                 p {
                     font-weight: 500;
                     font-size: 15px;
@@ -177,7 +190,7 @@
         }
     }
 
-    // order summary
+    // ORDER SUMMARY
     .summary-wrapper {
         background-color: white;
         border-radius: 8px;
@@ -282,6 +295,113 @@
         .cs-button {
             margin: 32px 0;
             width: 100%;
+        }
+    }
+}
+
+/* tablet */
+@media screen and (min-width: 700px) {
+    #checkout-form {
+        align-items: center;
+
+        .form-wrapper {
+            width: 100%;
+            max-width: 730px;
+            padding: 30px 27px;
+
+            h2 {
+                font-size: 32px;
+                letter-spacing: 1.14px;
+                margin-bottom: 41px;
+            }
+
+            fieldset {
+                margin-bottom: 53px;
+
+                .group-wrapper,
+                .payment-group-wrapper,
+                .e-money-selected {
+                    display: grid;
+                    grid-template-columns: 1fr 1fr;
+                    gap: 16px 24px;
+                }
+
+                &:last-child {
+                    margin-bottom: 0;
+                }
+
+                &:nth-of-type(2) {
+                    .group-wrapper {
+                        grid-template-areas: "address address"
+                            "zip city"
+                            "country .";
+
+                        .form-group {
+                            &:nth-of-type(1) {
+                                grid-area: address;
+                            }
+
+                            &:nth-of-type(2) {
+                                grid-area: zip;
+                            }
+
+                            &:nth-of-type(2) {
+                                grid-area: city;
+                            }
+
+                            &:nth-of-type(3) {
+                                grid-area: country;
+                            }
+                        }
+                    }
+                }
+
+                .form-group {
+                    margin-bottom: 0;
+                }
+
+                // radio inputs
+                .payment-group-wrapper {
+                    grid-template-areas: "label radio1"
+                        ". radio2";
+
+                    .radio-group {
+                        .payment-label {
+                            grid-area: label;
+                        }
+
+                        &:nth-of-type(1) {
+                            grid-area: radio1;
+                            margin-bottom: 0;
+                        }
+
+                        &:nth-of-type(2) {
+                            grid-area: radio2;
+                            margin-bottom: 24px;
+                        }
+                    }
+                }
+
+            }
+        }
+
+        // ORDER SUMMARY
+        .summary-wrapper {
+            width: 100%;
+            max-width: 730px;
+
+            padding: 32px 32px 0 32px;
+
+            ul {
+                li {
+                    div {
+                        h4 {
+                            max-width: none;
+                        }
+                    }
+                }
+            }
+
         }
     }
 }
@@ -412,5 +532,48 @@
             margin-top: 24px;
         }
     }
+}
 
+/* tablet */
+@media screen and (min-width: 700px) {
+    .payment-success-wrapper {
+        .payment-success {
+            padding: 48px;
+
+            h2 {
+                font-size: 32px;
+                letter-spacing: 1.14px;
+            }
+
+            .order-summary {
+                flex-direction: row;
+                width: 100%;
+                margin-top: 33px;
+
+                ul {
+                    border-radius: 8px 0 0 8px;
+                    width: 60%;
+                }
+
+                .grand-total {
+                    width: 40%;
+                    border-radius: 0 8px 8px 0;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                }
+
+                .expanded {
+                    justify-content: end;
+                    padding-bottom: 41px;
+                }
+
+            
+            }
+
+            .cs-button {
+                margin-top: 46px;
+            }
+        }
+    }
 }
