--- a/src/assets/sass/components/cart.scss
+++ b/src/assets/sass/components/cart.scss
@@ -146,3 +146,12 @@
         }
     }
 }
+
+/* tablet */
+@media screen and (min-width: 700px) {
+    .cart-wrapper {
+        justify-content: end;
+        padding-right: 40px;
+        
+    }
+}
