updated urls fixed spelling

--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -419,7 +419,7 @@ picture {
 
     p {
         max-width: 573px;
-        margin: 32px auto 0 32px;
+        margin: 32px auto 0 auto;
     }
 }
 
