--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -314,11 +314,15 @@ picture {
 /* tablet header */
 @media screen and (min-width:700px) {
     #cs-navigation {
+        display: flex;
+        justify-content: center;
 
         nav {
             justify-content: flex-start;
             gap: 42px;
-            padding: 0 40px;
+            padding: 0;
+            border-bottom: 1px solid var(--grey-300);
+            width: 90%;
 
             .cart-button {
                 margin: 0 0 0 auto;
@@ -335,10 +339,22 @@ picture {
 }
 
 /* desktop header */
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1200px) {
     #cs-navigation {
+        padding: 0 165px;
+
         .cs-toggle {
             display: none;
+        }
+
+        nav {
+            justify-content: space-between;
+            width: 100%;
+            height: 96px;
+
+            .cart-button {
+                margin: 0;
+            }
         }
 
         .nav-links-wrapper {
@@ -347,6 +363,7 @@ picture {
             position: static;
             z-index: 1;
             transform: scaleX(1);
+            background-color: var(--navBackground);
 
             .categories {
                 display: none;
@@ -420,6 +437,30 @@ picture {
     p {
         max-width: 573px;
         margin: 32px auto 0 auto;
+    }
+}
+
+/* desktop */
+@media screen and (min-width: 1200px) {
+    #about {
+        display: flex;
+        gap: 125px;
+        align-items: center;
+        margin-bottom: 200px;
+
+        picture {
+            order: 1;
+        }
+
+        .cs-text {
+            h2 {
+                text-align: left;
+            }
+
+            p {
+                text-align: left;
+            }
+        }
     }
 }
 
@@ -518,7 +559,31 @@ footer {
             justify-self: end;
             margin-top: 48px;
         }
+    }
+}
 
+/* desktop */
+@media screen and (min-width: 1200px){
+    footer {
+        padding: 75px 165px 48px 165px; 
+        grid-template-areas: "logo sitemap"
+        "text socials"
+        "copyright .";
 
+        .color-box {
+            left: 165px;
+        }
+
+        .sitemap {
+            justify-self: end;
+        }
+
+        .social-links {
+            align-items: end;
+        }
+
+        .footer-text {
+            margin-top: 20px;
+        }
     }
 }
