--- a/src/assets/sass/components/otherProducts.scss
+++ b/src/assets/sass/components/otherProducts.scss
@@ -2,6 +2,9 @@
 .other-products {
     h2 {
         text-align: center;
+        font-size: 24px;
+        letter-spacing: .86px;
+        margin-bottom: 40px;
     }
 
     .container {
@@ -18,6 +21,8 @@
 
             h3 {
                 margin: 0;
+                font-size: 24px;
+                letter-spacing: 1.71px;
             }
 
             img {
