--- a/src/assets/sass/home.scss
+++ b/src/assets/sass/home.scss
@@ -23,6 +23,7 @@
     .cs-text {
         position: absolute;
         padding: 0 50px;
+        transform: translateY(65px);
 
         h1 {
             color: white;
@@ -44,6 +45,7 @@
 
         .cs-button {
             margin: auto;
+            margin-top: 28px;
         }
     }
 }
@@ -54,6 +56,7 @@
         .cs-text {
             max-width: 400px;
             padding: 0;
+            transform: translateY(30px);
 
             h1 {
                 font-size: 56px;
@@ -77,6 +80,7 @@
             width: 400px;
             padding: 0;
             left: 165px;
+            transform: translateY(40px);
 
             h1 {
                 font-size: 56px;
@@ -141,7 +145,8 @@
 
         // first product
         &:nth-of-type(1) {
-            background-image: url("/images/home/desktop/pattern-circles.svg"), linear-gradient(var(--primary), var(--primary));
+            background-image: url("/images/home/desktop/pattern-circles.svg");
+            background-color: var(--primary);
             background-size: contain;
             background-position: top;
             background-repeat: no-repeat;
@@ -294,6 +299,15 @@
             &:nth-of-type(1) {
                 padding-top: 52px;
                 padding-bottom: 64px;
+                background-size: auto;
+                background-position: bottom;
+
+                .cs-text {
+                    h2 {
+                        font-size: 56px;
+                        letter-spacing: 2px;
+                    }
+                }
             }
 
             &:nth-of-type(2) {
@@ -324,7 +338,7 @@
 }
 
 /* desktop */
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1399px) {
     .home-featured {
         gap: 48px;
         margin-bottom: 32px;
@@ -332,6 +346,10 @@
         li {
 
             &:nth-of-type(1) {
+                background-color: var(--primary);
+                background-image: url("/images/home/desktop/image-zx9-speaker.png"), url("/images/home/desktop/pattern-circles.svg");
+                background-position: top 110px left 120px, top -40px left -163px;
+                background-size: 380px auto, auto;
                 flex-direction: row;
                 position: relative;
                 justify-content: end;
@@ -342,6 +360,7 @@
                     margin: 0;
                     left: 110px;
                     bottom: -10px;
+                    display: none;
 
                     img {
                         width: 380px;
@@ -360,12 +379,13 @@
                 height: 320px;
             }
 
-             &:nth-of-type(3) {
+            &:nth-of-type(3) {
                 gap: 30px;
+
                 .cs-text {
                     padding: 101px 0 101px 95px;
                 }
-             }
+            }
         }
     }
 }
