--- a/src/assets/sass/home.scss
+++ b/src/assets/sass/home.scss
@@ -123,6 +123,7 @@
     .home-content-wrapper {
         padding: 200px 165px 0 165px;
         gap: 168px;
+        margin-bottom: 100px;
     }
 }
 
