--- a/src/assets/sass/components/productCardShort.scss
+++ b/src/assets/sass/components/productCardShort.scss
@@ -2,63 +2,108 @@
 
 .product-card-short {
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
 
-    img {
-        width: 100%;
-        height: auto;
-        margin-bottom: 32px;
-    }
-
-    .new {
-        margin-bottom: 24px;
-    }
-
-    h2 {
-        font-size: 28px;
-        text-transform: uppercase;
-        letter-spacing: 1px;
-    }
-
-    p {
-        margin: 24px 0;
-    }
-
-    .cs-button {
-        margin: 0 auto;
-    }
-}
-
-/* tablet */
-@media  screen and (min-width: 700px) {
-    .product-card-short {
+    picture {
         img {
-            margin-bottom: 52px;
-        }
+            width: 100%;
+            height: auto;
 
+        }
+    }
+
+    .cs-text {
         .new {
-            margin-bottom: 16px;
+            margin-bottom: 24px;
         }
 
         h2 {
-            font-size: 40px;
-            letter-spacing: 1.44px;
-            margin-top: 0;
-            margin-bottom: 32px;
+            font-size: 28px;
+            text-transform: uppercase;
+            letter-spacing: 1px;
         }
 
         p {
-            max-width: 572px;
-            margin: auto;
+            margin: 24px 0;
         }
 
         .cs-button {
-            margin-top: 24px;
+            margin: 0 auto;
         }
+    }
 
+}
+
+/* tablet */
+@media screen and (min-width: 700px) {
+    .product-card-short {
+        gap: 52px;
+        max-width: 800px;
+
+        .cs-text {
+            .new {
+                margin-bottom: 16px;
+            }
+
+            h2 {
+                font-size: 40px;
+                letter-spacing: 1.44px;
+                margin-top: 0;
+                margin-bottom: 32px;
+            }
+
+            p {
+                max-width: 572px;
+                margin: auto;
+            }
+
+            .cs-button {
+                margin-top: 24px;
+            }
+        }
 
         // spacing between last card and categories component
         &:last-child {
             margin-bottom: 52px;
+        }
+    }
+}
+
+/* desktop */
+@media screen and (min-width: 1200px) {
+    .product-card-short {
+        flex-direction: row;
+        gap: 125px;
+        align-items: center;
+        justify-content: center;
+        text-align: left;
+        max-width: none;
+
+        picture {
+            width: 48%;
+
+            img {
+                margin-bottom: 0;
+            }
+        }
+
+        .cs-text {
+            .cs-button {
+                margin: 0;
+                margin-top: 40px;
+            }
+        }
+
+        &:last-child {
+            margin-bottom: 40px;
+        }
+
+        &:nth-child(even) {
+            picture {
+                order: 1;
+            }
         }
     }
 }
